# stock_picker

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
data/input/: futu_filter_spec.json  universe_rules.yaml  watchlist.csv
src/stock_picker/: __init__.py
src/stock_picker/brokers/: __init__.py  base.py  futu.py  ibkr_cp.py  ibkr_tws.py
src/stock_picker/cli/: __init__.py  migrate_legacy_cache.py  run.py
src/stock_picker/config/: __init__.py  loader.py  schema.py
src/stock_picker/data/: __init__.py  cache.py  fetch.py  historical_store.py  history_sync.py  normalize.py  quality.py  router.py
src/stock_picker/providers/: __init__.py  base.py  futu.py  yahoo.py
src/stock_picker/report/: __init__.py  render_md.py
src/stock_picker/report/templates/: portfolio_report.md.j2
src/stock_picker/research/: __init__.py  features.py
src/stock_picker/research/models/: __init__.py  prophet.py
src/stock_picker/research/selection/: __init__.py  rules.py  scorer.py
src/stock_picker/universe/: __init__.py  futu_filter_loader.py  load_watchlist.py  rule_screener.py  symbol_mapper.py
tests/: test_futu_filter_loader.py  test_history_sync.py  test_scaffold.py
